# spotify-dataflow

./: .get_airflow_password.sh  .gitignore  README.md  docker-compose.yaml  requirements.txt  run.sh
airflow/dags/: dag_spotify.py
airflow/dags/util/: spotify.py  storage.py
configuration/trino/: config.properties
configuration/trino/catalog/: minio.properties
dbt_spotify_manipulator/: dbt_project.yml  profiles.yml
dbt_spotify_manipulator/models/: sources.yml
dbt_spotify_manipulator/models/01_bronze/: bronze_spotify_recommendations_happy.sql  bronze_spotify_recommendations_sad.sql
dbt_spotify_manipulator/models/02_silver/: silver_spotify_recommendations.sql
dbt_spotify_manipulator/models/03_gold/: gold_popularity_by_genre.yml  gold_top_popular_songs_happy.sql  gold_top_popular_songs_sad.sql
spotify_dataflow/: .airflowignore  requirements.txt
spotify_dataflow/spotify_dataflow/configuration/airflow/: airflow.Dockerfile
spotify_dataflow/spotify_dataflow/utils/: spotify.py  storage.py
spotify_song_genre_predictor/spotify_genre_serving/: Dockerfile  README.md  pyproject.toml
spotify_song_genre_predictor/spotify_genre_serving/src/song_genre_predictor/: main.py
spotify_song_genre_predictor/spotify_genre_training/: Dockerfile  README.md  pyproject.toml
spotify_song_genre_predictor/spotify_genre_training/src/song_genre_trainer/: spotify_data_loader.py  spotify_data_transformer.py  spotify_genre_classifier.py  train.py
spotify_song_genre_predictor/spotify_genre_training/src/song_genre_trainer/model/: datasets.py  outcome_metrics.py
(+11 files in other folders)
