[tool.poetry]
name = "spotify-genre-serving"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "song_genre_predictor", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
trino = "^0.329.0"
uvicorn = "^0.30.3"
mlflow = "^2.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
