[tool.poetry]
name = "spotify_genre_training"
version = "0.1.0"
description = ""
authors = ["Dayvid Castro <wellescastro@gmail.com>"]
readme = "README.md"
packages = [
    { include = "song_genre_trainer", from = "src" }
]

[tool.poetry.scripts]
train = "song_genre_trainer.train:main"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
trino = "0.328.0"
mlflow = "^2.15.1"

[tool.poetry.dev-dependencies]
ruff = "^0.6.1"

[tool.ruff]
fix = true
indent-width = 4
line-length = 100
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
